--- a/src/components/Titlebar/titlebar.scss
+++ b/src/components/Titlebar/titlebar.scss
@@ -1,11 +1,16 @@
+$line-height: 1.1rem;
 .titlebar {
   text-align: center;
+  line-height: $line-height;
   padding: 15px;
   position: relative;
   box-shadow: 0px 2px 6px 0px rgba(28, 28, 28, 0.1);
+  font-size: $line-height;
+
   &__close {
     position: absolute;
     left: 15px;
-    color: #696969
+    font-size: $line-height + 0.2;
+    color: #676767
   }
 }
