Added static wallet page

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,11 @@ body {
   font-family: sans-serif;
   font-size: .9rem;
 }
+
+hr {
+  height: 1px;
+    border: 0;
+    border-top: 1px solid #f0efef;
+    margin: 1em 0;
+    padding: 0;
+}
